--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,11 @@
             <version>1.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.firebase</groupId>
+            <artifactId>firebase-admin</artifactId>
+            <version>5.2.0</version>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
